# hlc-gen

./: .gitignore  Cargo.toml  README.md
src/: epoch.rs  error.rs  lib.rs  source.rs  timestamp.rs
tests/: generator.rs  hlc_gen.rs  timestamp.rs
tests/common/: mod.rs
