[package]
name = "hlc-gen"
version = "1.2.3"
edition = "2024"
license = "MIT"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "Lock-free Hybrid Logical Clock (HLC) timestamp generator."
homepage = "https://github.com/farazdagi/hlc-gen"
repository = "https://github.com/farazdagi/hlc-gen"
documentation = "https://docs.rs/hlc-gen"
readme = "README.md"
keywords = ["hlc", "tsid", "clock", "timestamp", "lamport-clock"]
categories = ["algorithms", "data-structures"]

[dependencies]
chrono = "0.4"
parking_lot = "0.12"
thiserror = "2.0"
